<resources>
    <string name="app_name">الغزاوي</string>


    <string name="chose_city">حدد المحافظة</string>
    <string name="chose_type">حدد نوع المكان</string>
    <string name="north">الشمال</string>
    <string name="rafah">رفح</string>
    <string name="khan_yunis">خان يونس</string>
    <string name="central">الوسطى</string>
    <string name="gaza">غزة</string>
    <string name="restaurant">مطعم</string>
    <string name="coffee_shop">كفي شوب</string>
    <string name="ice_cream">مرطبات</string>
    <string name="coffee">قهوة</string>
    <string name="sweets">حلويات</string>
    <string name="chose_city_and_type">\حدد المحافظة ونوع المكان</string>
    <string name="filter_result">تخصيص النتائج</string>
    <string name="search">ابحث</string>
    <string name="cancel">إلغاء</string>


    <!--     firestor fields       -->
    <string name="collection_group_meta_data">meta_data</string>
    <string name="firestore_field_type">type</string>
    <string name="firestore_field_city">city</string>
    <string name="firsetore_field_restaurant">مطعم</string>
    <string name="firestore_collection_cities">cities</string>
    <string name="firestore_field_images">images</string>
    <string name="firestore_field_address">address</string>
    <string name="firestore_field_name">name</string>
    <string name="firestore_field_location">location</string>
    <string name="firestore_field_description">description</string>
    <string name="firestore_field_geo_hash">geo_hash</string>
    <string name="no_result"> لا يوجد نتائج, جرب طريقة أخرى للبحث</string>
    <string name="search_hint">حدد المدينة ونوع المكان</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_cities">المحافظات</string>
    <string name="title_area">بالقرب</string>
    <string name="title_campaigns">الحملات</string>
    <string name="title_about">الغزاوي</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title">الغزاوي</string>
    <string name="show_on_map">عرض على الخريطة</string>
    <string name="make_call">اتصال</string>


</resources>