<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:id="@+id/types_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypesRadioClicked"
            android:text="@string/restaurant" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypesRadioClicked"
            android:text="@string/coffee_shop" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypesRadioClicked"
            android:text="@string/ice_cream" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypesRadioClicked"
            android:text="@string/coffee" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTypesRadioClicked"
            android:text="@string/sweets" />

    </RadioGroup>
</merge>